Added some more functionality and swagger integration
