# routes/auctions.js
@@ -8,6 +8,7 @@ const Item = require('../models/Item')
 const verifyToken = require('../verifyToken')
 
 const {startAuctionValidation} = require('../validations/auction_validation');
+const {postBidValidation} = require('../validations/auction_validation');
 const { userIsItemOwner } = require('../helper/auction_helper');
 const { date } = require('joi');
 
@@ -66,7 +67,6 @@ router.post('/start_auction', verifyToken, async (req, res) => {
     }
 
    var today = new Date();
-
     const newAuction = new Auction({
         _id: new mongoose.Types.ObjectId(),
         item_id: req.body.item_id,
@@ -88,5 +88,78 @@ router.post('/start_auction', verifyToken, async (req, res) => {
         res.status(400).send('Something went wrong!')
     }
 })
+
+
+router.post('/:auction_id/post_bid', verifyToken, async (req, res) => {
+    const {error} = postBidValidation(req.body)
+    if (error) {
+        res.status(400).send('Please enter a valid bid (greater than 0).')
+        return;
+    }
+    try {
+        const auction = await Auction.findById(req.params.auction_id)
+        if (!auction) {
+            res.status(400).send('That auction does not exist!')
+            return;
+        }
+        if (auction.end <= Date.now()) {
+            res.status(400).send('You can only bid in active auctions!')
+            return;
+        }
+        const itemInAuction = await Item.findById(auction.item_id)
+        if (itemInAuction.item_owner.toString() == req.user._id) {
+            res.status(400).send('You cannot bid on your own item!')
+            return;
+        }
+        const highestBid = auction.highest_bid
+        const newBidAmount = req.body.bid_amount
+        if (highestBid > newBidAmount) {
+            res.status(400).send('Your bid must be higher than the current highest bid')
+            return;
+        }
+
+        const newBid = {
+            bid_id: mongoose.Types.ObjectId(),
+            bidder_id: mongoose.Types.ObjectId(req.user._id),
+            bid_amount: req.body.bid_amount,
+            bid_date: new Date()
+        }
+
+        auction.bid_history.push(newBid)
+        auction.highest_bid = newBid.bid_amount
+        auction.highest_bidder = newBid.bidder_id
+        await auction.save()
+        res.status(200).send({
+            message: 'Bid sucessfully recorded',
+            details: auction})
+
+    } catch (err) {
+        res.send({message: err})
+    }
+})
+
+router.post('/:auction_id/cancel_auction', verifyToken, async (req, res) => {
+    try {
+        const auction = await Auction.findById(req.params.auction_id)
+        if (!auction) {
+            res.status(400).send('That auction does not exist!')
+            return;
+        }
+        const item = await Item.findById(auction.item_id)
+        if (item.item_owner.toString() != req.user._id) {
+            res.status(400).send('You can only cancel your own auctions.')
+            return;
+        }
+        auction.status = 'cancelled'
+        await auction.save()
+        res.status(200).send({
+            message: 'Auction has been cancelled',
+            auction: auction
+        })
+    } catch (err) {
+        res.status(400).send('There has been an error')
+    }
+})
+
 
 module.exports = router
